@@ -1560,6 +1560,22 @@ nco_qnt_mtd /* [fnc] Define output filters based on input filters */
 
 #define NCO_MAX_LEN_MPL_SNG 100
   char mpl_val_sng[NCO_MAX_LEN_MPL_SNG];
+  /* NB: Logic to eliminate quotes copied from and explained in nco_vrs_prn */
+  char vrs_nco_cpp[]=TKN2SNG(NCO_VERSION); /* [sng] NCO version (with quotes) */
+  char vrs_nc_cpp[]=TKN2SNG(NC_VERSION); /* [sng] netCDF version (with quotes) */
+  char *vrs_nco_sng; /* [sng] NCO version */
+  char *vrs_nc_sng; /* [sng] netCDF version */
+  vrs_nco_sng=vrs_nco_cpp;
+  vrs_nc_sng=vrs_nc_cpp;
+  if(vrs_nco_cpp[0L] == '"'){
+    vrs_nco_cpp[strlen(vrs_nco_cpp)-1L]='\0';
+    vrs_nco_sng=vrs_nco_cpp+1L;
+  } /* !vrs_nco_cpp */
+  if(vrs_nc_cpp[0L] == '"'){
+    vrs_nc_cpp[strlen(vrs_nc_cpp)-1L]='\0';
+    vrs_nc_sng=vrs_nc_cpp+1L;
+  } /* !vrs_nc_cpp */
+  
   /* 20240216: Naked tokens for exact versions, e.g., 5.2.0, cause issues with some compilers
      Apparently these compilers attempt to convert numeric-looking versions into numbers not strings
      This leads to errors like:
@@ -1568,8 +1584,8 @@ nco_qnt_mtd /* [fnc] Define output filters based on input filters */
      One alternative is to replace NCO_VERSION by TKN2SNG(NCO_VERSION) 
      However, this adds an undesirable extra pair of quotes to the output, e.g.,
      compression_info:implementation = "libnetcdf version \"4.9.3-development\"" ; */
-  if(flg_baa) (void)snprintf(mpl_val_sng,NCO_MAX_LEN_MPL_SNG,"%s version %s",mpl_val_nco,NCO_VERSION);
-  if(flg_hdf) (void)snprintf(mpl_val_sng,NCO_MAX_LEN_MPL_SNG,"%s version %s",mpl_val_libnetcdf,NC_VERSION);
+  if(flg_baa) (void)snprintf(mpl_val_sng,NCO_MAX_LEN_MPL_SNG,"%s version %s",mpl_val_nco,vrs_nco_sng);
+  if(flg_hdf) (void)snprintf(mpl_val_sng,NCO_MAX_LEN_MPL_SNG,"%s version %s",mpl_val_libnetcdf,vrs_nc_sng);
 
   qnt_lvl_dpl=qnt_lvl;
   aed_ppc_lvl.val.ip=&qnt_lvl_dpl;
