@@ -2,7 +2,10 @@
 
 	* NCO 5.2.1-alpha01 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.2.1-alpha01: Engoron';git push
-	git tag -a 5.2.1-alpha01 -m 'Functionally identical to 5.2.0';git push --tags
+	git tag -a 5.2.1-alpha01 -m 'Functionally identical to 5.2.0 (except compiles with bld/Makefile)';git push --tags
+
+	* nco_qnt_mtd() implement workaround to compiler-dependent behavior at tokenization
+	Prevents error on too many decimal points in number in expansion of macro ‘NCO_VERSION’	when version is purely numeric, e.g., 5.2.0
 
 	* NCO 5.2.0 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.2.0: Fast Car';git push
